--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -18,7 +18,7 @@ body {
   font-family: $body-font;
   font-size: 1rem;
   color: $text-color;
-  line-height: 1.3;
+  line-height: 1.35;
 }
 
 article {
@@ -94,16 +94,16 @@ blockquote {
 
 .tcs-title-box-background {
   position: absolute;
-  background-color: #333;
+  background-image: $background-gradient;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   transition: transform 0.15s;
-  opacity: 0.1;
   transform: translate3d(0.5rem, 0.5rem, 0);
   z-index: 5;
   .tcs-title:hover + & {
+    opacity: 0.6;
     background-color: $main-color;
   }
 }
@@ -111,4 +111,13 @@ blockquote {
 article img {
   border: 2px solid #333;
   box-shadow: 0.5rem 0.5rem #333;
+  padding: 0.375rem;
+}
+
+article img,
+blockquote,
+.track-listing summary,
+.box,
+.nav-list a {
+  background-image: $background-gradient;
 }
