--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,3 +13,9 @@
 
 // Layout
 @import "layout";
+
+// Components
+@import "box";
+@import "track-listing";
+@import "components/header";
+@import "components/footer";
