--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -19,6 +19,7 @@ body {
   font-size: 1rem;
   color: $text-color;
   line-height: 1.35;
+  background-image: linear-gradient(to top, #f8f9fa 0%, white 100%);
 }
 
 article {
@@ -41,6 +42,7 @@ article {
   }
 }
 
+.sidebar,
 article,
 footer {
   // Links
@@ -57,9 +59,7 @@ footer {
 
 // Blockquotes
 blockquote {
-  border: 2px solid #333;
-  box-shadow: 0.5rem 0.5rem #333;
-  padding: 0.75rem;
+  @include box(0.5rem);
   margin-bottom: 1.5rem;
 
   & > * + * {
@@ -75,49 +75,6 @@ blockquote {
   }
 }
 
-.tcs-title {
-  font-family: "Shipped Goods", $body-font;
-  font-size: 2.5rem;
-  color: inherit;
-  text-decoration: none;
-  position: relative;
-  padding: 1.5rem;
-  border: 2px solid #333;
-  display: block;
-  z-index: 10;
-}
-
-.tcs-title-box {
-  position: relative;
-  display: inline-block;
-}
-
-.tcs-title-box-background {
-  position: absolute;
-  background-image: $background-gradient;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  transition: transform 0.15s;
-  transform: translate3d(0.5rem, 0.5rem, 0);
-  z-index: 5;
-  .tcs-title:hover + & {
-    opacity: 0.6;
-    background-color: $main-color;
-  }
-}
-
 article img {
-  border: 2px solid #333;
-  box-shadow: 0.5rem 0.5rem #333;
-  padding: 0.375rem;
-}
-
-article img,
-blockquote,
-.track-listing summary,
-.box,
-.nav-list a {
-  background-image: $background-gradient;
+  @include box;
 }
