--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,7 @@
 // Colours
 $main-color: #058ed9;
+$secondary-color: #e68ef8;
+$tertiary-color: #8ef8d0;
 $text-color: #333;
 $background-gradient: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
 
@@ -8,6 +10,29 @@ $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
+
+// Content width
+$content-width-sm: 500px;
+$content-width-md: 950px;
+@mixin content {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 100%;
+  padding: 1rem 2rem;
+  @media screen and (min-width: $breakpoint-sm) {
+    width: $content-width-sm;
+  }
+  @media screen and (min-width: $breakpoint-md) {
+    width: $content-width-md;
+  }
+}
+
+@mixin box($padding: 0.375rem, $shadow-size: 0.5rem) {
+  border: 2px solid $text-color;
+  box-shadow: $shadow-size $shadow-size $text-color;
+  background-image: $background-gradient;
+  padding: $padding;
+}
 
 // Fonts
 $system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
