Update the styles and add links to streaming services

--- a/_sass/_box.scss
+++ b/_sass/_box.scss
@@ -4,9 +4,12 @@
 }
 
 .box-image {
-  border-bottom: 2px solid $text-color;
+  border-bottom: $border;
 }
 
 .box-content {
   padding: 0.5rem;
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1.15;
+  }
 }
