--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,3 +19,6 @@
 @import "track-listing";
 @import "components/header";
 @import "components/footer";
+
+// Utilities/helpers
+@import "utilities";
