--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,18 +4,21 @@
       <img src="/assets/images/tide-album-art.jpg">
     </div>
     <div class="box-content">
-      <iframe style="border: 0; width: 100%; height: 120px; display: block;"
-        src="https://bandcamp.com/EmbeddedPlayer/album=2889781778/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=none/transparent=true/"
-        seamless>
-        <a href="https://thecrystalships.bandcamp.com/album/the-tide">The Tide by The Crystal Ships</a>
-      </iframe>
-    </div>
-  </div>
-
-  <div class="box">
-    <div class="box-content">
-      <h3>Get the album!</h3>
-      <p>Buy <em>The Tide</em> on <a href="https://thecrystalships.bandcamp.com/album/the-tide" target="_blank">Bandcamp</a></p>
+      <h3>Listen to the The Crystal Ships</h3>
+      <ul class="spacer-top">
+        <li>
+          <a href="https://thecrystalships.bandcamp.com/album/the-tide" target="_blank">Bandcamp</a>
+        </li>
+        <li>
+          <a href="https://open.spotify.com/album/3y3TJXarehh3qdQyh8EmMa" target="_blank">Spotify</a>
+        </li>
+        <li>
+          <a href="https://music.apple.com/ca/album/the-tide/1491032961" target="_blank">Apple Music</a>
+        </li>
+        <li>
+          <a href="https://play.google.com/store/music/album/The_Crystal_Ships_The_Tide?id=B6yplxypvoh43xmb2bl3p4u3qum" target="_blank">Google Play</a>
+        </li>
+      </ul>
     </div>
   </div>
 </aside>
