--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,6 +11,12 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
+// Borders
+$border-width: 2px;
+$border-style: solid;
+$border-color: $text-color;
+$border: $border-width $border-style $border-color;
+
 // Content width
 $content-width-sm: 500px;
 $content-width-md: 950px;
@@ -27,8 +33,8 @@ $content-width-md: 950px;
   }
 }
 
-@mixin box($padding: 0.375rem, $shadow-size: 0.5rem) {
-  border: 2px solid $text-color;
+@mixin box($padding: 0.375rem, $shadow-size: 0.375rem) {
+  border: $border;
   box-shadow: $shadow-size $shadow-size $text-color;
   background-image: $background-gradient;
   padding: $padding;
