--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,6 +19,7 @@
 @import "track-listing";
 @import "components/header";
 @import "components/footer";
+@import "components/theme-switcher";
 
 // Utilities/helpers
 @import "utilities";
