--- a/_sass/_box.scss
+++ b/_sass/_box.scss
@@ -5,6 +5,9 @@
 
 .box-image {
   border-bottom: $border;
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  overflow: hidden;
 }
 
 .box-content {
