--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,6 +4,7 @@ $secondary-color: #e68ef8;
 $tertiary-color: #8ef8d0;
 $text-color: #333;
 $background-gradient: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
+$radius: 6px;
 
 // Breakpoints
 $breakpoint-sm: 576px;
@@ -35,8 +36,11 @@ $content-width-md: 950px;
 
 @mixin box($padding: 0.375rem, $shadow-size: 0.375rem) {
   border: $border;
-  box-shadow: $shadow-size $shadow-size $text-color;
-  background-image: $background-gradient;
+  border-color: var(--border-color);
+  box-shadow: $shadow-size $shadow-size var(--border-color);
+  background: var(--bg-gradient);
+  border-radius: $radius;
+  border-radius: var(--radius);
   padding: $padding;
 }
 
