--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  padding: 1rem 2rem;
+  padding: 3rem 2rem 1rem;
   max-width: 100%;
   width: 500px;
   margin-right: auto;
@@ -31,10 +31,13 @@
       display: block;
       padding: 0.5rem;
       color: #333;
+      color: var(--text-color);
       border: 2px solid #333;
+      border-color: var(--border-color);
       text-decoration: none;
       &:hover {
-        background-color: #dbdbdb;
+        background: $background-gradient;
+        background: var(--bg-gradient);
       }
     }
   }
@@ -81,7 +84,8 @@
   text-decoration: none;
   position: relative;
   padding: 1.5rem;
-  border: 2px solid #333;
+  border: 2px solid $border-color;
+  border-color: var(--border-color);
   display: block;
   z-index: 10;
 }
@@ -93,7 +97,8 @@
 
 .tcs-title-box-background {
   position: absolute;
-  background-image: $background-gradient;
+  background: $background-gradient;
+  background: var(--bg-gradient);
   top: 0;
   right: 0;
   bottom: 0;
