--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -15,15 +15,24 @@
 
 .nav-list {
   list-style: none;
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  box-shadow: 0.5rem 0.5rem #333;
+  box-shadow: 0.5rem 0.5rem var(--border-color);
+  border-radius: var(--radius);
   & > li {
     display: block;
     width: 100%;
     flex: 0 0 100%;
+    &:first-child > a {
+      border-top-left-radius: var(--radius);
+      border-top-right-radius: var(--radius);
+    }
+    &:last-child > a {
+      border-bottom-left-radius: var(--radius);
+      border-bottom-right-radius: var(--radius);
+    }
     &:not(:last-child) > a {
       border-bottom-width: 0;
     }
@@ -52,6 +61,8 @@
       margin-left: 1rem;
       a {
         transition: box-shadow 0.2s ease;
+        border-radius: var(--radius);
+        border-color: var(--text-color);
       }
       &.active a,
       a:hover {
@@ -92,7 +103,7 @@
 
 .tcs-title-box {
   position: relative;
-  display: inline-block;
+  text-align: center;
 }
 
 .tcs-title-box-background {
